style: fix product card overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -126,7 +126,7 @@ button {
   align-items: center;
   gap: 0.375rem;
   transition: all 01 ease;
-  padding: 0.5rem 0;
+  padding-top: 0.5rem;
 }
 
 .project__links a {
